--- a/contact.html
+++ b/contact.html
@@ -341,11 +341,10 @@
                            <br /><span>Your Project.</span>
                         </h1>
                      </div>
-
+                     <div id="result"></div>
                      <div class='gf_browser_chrome enform_wrapper enform_legacy_markup_wrapper' id='enform_wrapper_2'>
                         <div id='gf_2' class='enform_anchor' tabindex='-1'></div>
-                        <form method='post' enctype='multipart/form-data' target='_frame_2' id='enform_2'
-                           action='/contact/#gf_2'>
+                        <form id='contactform'>
                            <div class='enform_body enform-body'>
                               <ul id='enform_fields_2'
                                  class='enform_fields top_label form_sublabel_below description_below'>
@@ -353,39 +352,39 @@
                                     class="gfield gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible">
                                     <label class='gfield_label' for='input_2_1'>Name<span class="gfield_required"><span
                                              class="gfield_required gfield_required_asterisk">*</span></span></label>
-                                    <div class='ginput_container ginput_container_text'><input name='' id='' type='text'
-                                          value='' class='medium' tabindex='49' placeholder='Name*' aria-required="true"
-                                          aria-invalid="false" /></div>
+                                    <div class='ginput_container ginput_container_text'><input name='' id='name'
+                                          type='text' value='' class='medium' tabindex='49' placeholder='Name*'
+                                          required /></div>
                                  </li>
                                  <li id="field_2_2"
                                     class="gfield gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible">
                                     <label class='gfield_label' for='input_2_2'>Company Name<span
                                           class="gfield_required"><span
                                              class="gfield_required gfield_required_asterisk">*</span></span></label>
-                                    <div class='ginput_container ginput_container_text'><input name='' id='' type='text'
-                                          value='' class='medium' tabindex='50' placeholder='Company Name*'
-                                          aria-required="true" aria-invalid="false" /></div>
+                                    <div class='ginput_container ginput_container_text'><input name='' id='company'
+                                          type='text' value='' class='medium' tabindex='50' placeholder='Company Name*'
+                                          required /></div>
                                  </li>
                                  <li id="field_2_3"
                                     class="gfield field_sublabel_below field_description_below gfield_visibility_visible">
                                     <label class='gfield_label' for='input_2_3'>Phone Number</label>
-                                    <div class='ginput_container ginput_container_text'><input name='' id='' type='text'
-                                          value='' class='medium' tabindex='51' placeholder='Phone Number'
-                                          aria-invalid="false" /></div>
+                                    <div class='ginput_container ginput_container_text'><input name='' id='number'
+                                          type='text' value='' class='medium' tabindex='51' placeholder='Phone Number'
+                                          required /></div>
                                  </li>
                                  <li id="field_2_4"
                                     class="gfield gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible">
                                     <label class='gfield_label' for='input_2_4'>Email<span class="gfield_required"><span
                                              class="gfield_required gfield_required_asterisk">*</span></span></label>
-                                    <div class='ginput_container ginput_container_email'> <input name='' id=''
+                                    <div class='ginput_container ginput_container_email'> <input name='' id='email'
                                           type='text' value='' class='medium' tabindex='52' placeholder='Email Address*'
-                                          aria-required="true" aria-invalid="false" />
+                                          required />
                                     </div>
                                  </li>
                               </ul>
                            </div>
                            <div class='enform_footer top_label'> <button class='button enform_button' data-magnetic=""
-                                 data-cursor="-opaque" id='enform_submit_button_2'>Submit <span><img
+                                 data-cursor="-opaque" id='enform_submit_button_2' type="submit">Submit <span><img
                                        src="/assets/resources/img/arrow-icon-c-01.svg" /></span></button>
                            </div>
                         </form>
